--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "url": "https://github.com/codrops/[NAME]/issues"
   },
   "devDependencies": {
-    "parcel": "^2.6.2"
+    "parcel": "^2.6.2",
+    "svgo": "^3.3.2"
   },
   "dependencies": {
     "gsap": "^3.10.4",
